style: fix date length on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,7 @@ button:hover {
 
 .calendar-nav-button {
   margin: 0 8px;
+  padding: 8px 9px;
   border-radius: 100px;
   text-align: center;
   vertical-align: baseline;
@@ -246,8 +247,9 @@ button:hover {
 
 .event-date input {
   height: 0;
-  width: 80%;
-  font-size: 12px;
+  width: 65%;
+  font-size: 10px;
+  margin: -5px -60px;
 }
 
 .event-title {
@@ -262,7 +264,18 @@ button:hover {
 .event-title input {
   height: 4px;
   width: 90%;
-  font-size: 12px;
+  font-size: 10px;
+}
+
+/* iOS devices */
+@supports (-webkit-touch-callout: none) {
+  .event-date input {
+    max-width: 100%;
+  }
+
+  .event-title input {
+    width: 85%;
+  }
 }
 
 @media only screen and (max-width: 1024px) {
@@ -287,17 +300,11 @@ button:hover {
     font-size: 10px;
   }
 
-  .event-date input {
-    width: 60%;
-    font-size: 10px;
-  }
-
-  .event-title {
-    font-size: 12px;
-  }
-
-  .event-title input {
-    width: 80%;
+  /* non-iOS devices */
+  @supports not (-webkit-touch-callout: none) {
+    .event-title input {
+      width: 80%;
+    }
   }
 }
 
@@ -342,14 +349,14 @@ button:hover {
   /* Event List Styles */
 
   .event-date {
-    width: 20%;
+    min-width: 20%;
+    width: auto;
   }
 
-  .event-date input {
-    width: 80%;
-  }
-
-  .event-title input {
-    width: 90%;
+  /* non-iOS devices */
+  @supports not (-webkit-touch-callout: none) {
+    .event-title input {
+      width: 90%;
+    }
   }
 }
